# smartlink

./: .gitignore  .gitmodules  Docker.auth  docker-compose.yml
.github/workflow/: cmake-single-platform.yml
.github/workflows/: cmake-single-platform.yml
agent/: CMakeLists.txt  CMakePresets.json  Dockerfile  endpoint.h  main.cpp
authentification/: CMakeLists.txt  Dockerfile.run  cmd_from_so.h  context.h  get_settings.h  icontext.h  iserver.h  main.cpp  middleware.h  routinehandler.h  rules.h  server.h  session.h  seturlcmd.h  soplugincmd.h  strategy.h
authentification/IoC/: DependencyResolver.h  IResolverContainer.h  IoCcontainer.h  RegisterCommand.h
authentification/plugins/Res_200_Handler/: CMakeLists.txt  CMakePresets.json  Res_200_Handler.cpp  context.h
authentification/plugins/Res_405_Handler/: CMakeLists.txt  Res_405_Handler.cpp
authentification/settings/: settings.json
redirector/: CMakeLists.txt  Dockerfile  Dockerfile.run  cmd_from_so.h  conditions.h  context.h  get_settings.h  icommand.h  iconditioncontext.h  imiddleware.h  iserver.h  main.cpp  middleware.h  routinehandler.h  rules.h  server.h  session.h  seturlcmd.h  soconditioncmd.h  soplugincmd.h  strategy.h
redirector/plugins/Con_Age_Handler/: CMakeLists.txt  Con_Age_Handler.cpp  context.h
redirector/plugins/Con_Daytime_Handler/: CMakeLists.txt
redirector/plugins/Con_Weekday_Handler/: CMakeLists.txt  Con_Weekday_Handler.cpp
redirector/plugins/Con_age_Handler/: CMakeLists.txt  Con_age_Handler.cpp
redirector/plugins/Con_daytime_Handler/: CMakeLists.txt  Con_daytime_Handler.cpp
redirector/plugins/Con_weekday_Handler/: CMakeLists.txt  Con_weekday_Handler.cpp
redirector/plugins/Res_307_Handler/: CMakeLists.txt  Res_307_Handler.cpp
redirector/plugins/Res_401_Handler/: CMakeLists.txt  Res_401_Handler.cpp
redirector/plugins/Res_405_Handler/: CMakeLists.txt
redirector/settings/: settings.json
